# sqlgym

./: .gitignore  README.md  pyproject.toml
scripts/: eval.py  example.py  make_datasets.py  make_react_dataset.py  train.py
sqlgym/: __init__.py  sqlgym.py
sqlgym/datasets/: __init__.py  bird.py  utils.py
